# focusboard

./: .env.example  ANDROID_SETUP.md  IOS_SETUP.md  README.md  README_TAURI.md  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  release.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/src/: main.rs
