[package]
name = "focusboard"
version = "0.0.0"
description = "Focus Board - Gerenciador de Foco e Produtividade"
authors = ["Focus Board Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = [] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-dialog = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "focusboard"
path = "src/main.rs"
